# SalaryCat

./: .gitignore  README.md  gif_loader.py  main.py  pyproject.toml
.github/workflows/: build-binaries.yml
